full_calibration fails, not clear what is wrong

--- a/tests/test_corresp.ipynb
+++ b/tests/test_corresp.ipynb
@@ -2,27 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Coord2d' from 'openptv_python.epi' (/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/epi.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 16\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenptv_python\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconstants\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MAXCAND\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenptv_python\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcorrespondences\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     10\u001b[0m     consistent_pair_matching,\n\u001b[1;32m     11\u001b[0m     match_pairs,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     14\u001b[0m     safely_allocate_target_usage_marks,\n\u001b[1;32m     15\u001b[0m )\n\u001b[0;32m---> 16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenptv_python\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mepi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Coord2d\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenptv_python\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimgcoord\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m img_coord\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mopenptv_python\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mparameters\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ControlPar, read_control_par, read_volume_par\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'Coord2d' from 'openptv_python.epi' (/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/epi.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %load tests/test_corresp.py\n",
     "\"\"\"Unit tests for the correspondence code.\"\"\"\n",
     "import unittest\n",
     "\n",
     "import numpy as np\n",
+    "from pathlib import Path\n",
     "\n",
     "from openptv_python.calibration import Calibration, read_calibration\n",
     "from openptv_python.constants import MAXCAND\n",
@@ -42,6 +31,7 @@
     "    match_coords,\n",
     "    matched_coords_as_arrays,\n",
     "    read_targets,\n",
+    "    n_tupel,\n",
     ")\n",
     "from openptv_python.trafo import dist_to_flat, metric_to_pixel, pixel_to_metric\n",
     "\n"
@@ -49,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,14 +76,14 @@
     "\n",
     "    for cam in range(num_cams):\n",
     "        ori_name = ori_tmpl % (cam + 1)\n",
-    "        calib.append(read_calibration(ori_name, added_name))\n",
+    "        calib.append(read_calibration(Path(ori_name), Path(added_name)))\n",
     "\n",
     "    return calib\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +100,7 @@
     "    tol - tolerance parameter for iterative flattening phase, see\n",
     "        trafo.h:correct_brown_affine_exact().\n",
     "    \"\"\"\n",
-    "    corrected = [[Coord2d()] * frm.num_targets[i_cam] for i_cam in range(cpar.num_cams)]\n",
+    "    corrected = [[Coord2d] * frm.num_targets[i_cam] for i_cam in range(cpar.num_cams)]\n",
     "\n",
     "    for cam in range(cpar.num_cams):\n",
     "        for part in range(frm.num_targets[cam]):\n",
@@ -138,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +145,7 @@
     "    for cam in range(cpar.num_cams):\n",
     "        # fill in only what's needed\n",
     "        frm.num_targets[cam] = 16\n",
-    "        frm.targets[cam] = [Target() for _ in range(frm.num_targets[cam])]\n",
+    "        frm.targets[cam] = np.tile(Target, frm.num_targets[cam])\n",
     "\n",
     "        # Construct a scene representing a calibration target, generate\n",
     "        # targets for it, then use them to reconstruct correspondences.\n",
@@ -183,93 +173,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "test_file_not_found (__main__.TestReadControlPar)\n",
-      "Read a nonexistent control.par file. ... ok\n",
-      "test_instantiate (__main__.TestReadControlPar)\n",
+      "test_file_not_found (__main__.TestReadControlPar.test_file_not_found)\n",
+      "Read a nonexistent control.par file. ... ERROR\n",
+      "test_instantiate (__main__.TestReadControlPar.test_instantiate)\n",
       "Creating a MatchedCoords object. ... ERROR\n",
-      "test_pairwise_matching (__main__.TestReadControlPar)\n",
+      "test_pairwise_matching (__main__.TestReadControlPar.test_pairwise_matching)\n",
       "Test pairwise matching function. ... ERROR\n",
-      "test_single_cam_corresp (__main__.TestReadControlPar)\n",
+      "test_single_cam_corresp (__main__.TestReadControlPar.test_single_cam_corresp)\n",
       "Single camera correspondence. ... ERROR\n",
-      "test_two_camera_matching (__main__.TestReadControlPar)\n",
+      "test_two_camera_matching (__main__.TestReadControlPar.test_two_camera_matching)\n",
       "Setup is the same as the 4-camera test, targets are darkened in. ... ERROR\n",
-      "test_valid_file (__main__.TestReadControlPar)\n",
+      "test_valid_file (__main__.TestReadControlPar.test_valid_file)\n",
       "Read a valid control.par file. ... ERROR\n",
       "\n",
       "======================================================================\n",
-      "ERROR: test_instantiate (__main__.TestReadControlPar)\n",
+      "ERROR: test_file_not_found (__main__.TestReadControlPar.test_file_not_found)\n",
+      "Read a nonexistent control.par file.\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_579388/1069249577.py\", line 8, in test_file_not_found\n",
+      "    read_control_par(\"nonexistent_file.txt\")\n",
+      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 551, in read_control_par\n",
+      "    return ControlPar().from_file(filename)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 503, in from_file\n",
+      "    if not filename.exists():\n",
+      "           ^^^^^^^^^^^^^^^\n",
+      "AttributeError: 'str' object has no attribute 'exists'\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_instantiate (__main__.TestReadControlPar.test_instantiate)\n",
       "Creating a MatchedCoords object.\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_651052/2570679598.py\", line 44, in test_instantiate\n",
+      "  File \"/tmp/ipykernel_579388/1069249577.py\", line 44, in test_instantiate\n",
       "    cal.from_file(\n",
-      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/calibration.py\", line 158, in from_file\n",
-      "    with open(ori_file, \"r\", encoding=\"utf-8\") as fp:\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: 'tests/testing_folder/calibration/cam1.tif.ori'\n",
+      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/calibration.py\", line 145, in from_file\n",
+      "    if not ori_file.exists():\n",
+      "           ^^^^^^^^^^^^^^^\n",
+      "AttributeError: 'str' object has no attribute 'exists'\n",
       "\n",
       "======================================================================\n",
-      "ERROR: test_pairwise_matching (__main__.TestReadControlPar)\n",
+      "ERROR: test_pairwise_matching (__main__.TestReadControlPar.test_pairwise_matching)\n",
       "Test pairwise matching function.\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_651052/2570679598.py\", line 247, in test_pairwise_matching\n",
+      "  File \"/tmp/ipykernel_579388/1069249577.py\", line 248, in test_pairwise_matching\n",
       "    cpar = read_control_par(\"tests/testing_fodder/parameters/ptv.par\")\n",
-      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 475, in read_control_par\n",
-      "    cpar.from_file(filename)\n",
-      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 437, in from_file\n",
-      "    raise FileNotFoundError(f\"Could not open file {filename}\")\n",
-      "FileNotFoundError: Could not open file tests/testing_fodder/parameters/ptv.par\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 551, in read_control_par\n",
+      "    return ControlPar().from_file(filename)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 503, in from_file\n",
+      "    if not filename.exists():\n",
+      "           ^^^^^^^^^^^^^^^\n",
+      "AttributeError: 'str' object has no attribute 'exists'\n",
       "\n",
       "======================================================================\n",
-      "ERROR: test_single_cam_corresp (__main__.TestReadControlPar)\n",
+      "ERROR: test_single_cam_corresp (__main__.TestReadControlPar.test_single_cam_corresp)\n",
       "Single camera correspondence.\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_651052/2570679598.py\", line 113, in test_single_cam_corresp\n",
+      "  File \"/tmp/ipykernel_579388/1069249577.py\", line 113, in test_single_cam_corresp\n",
       "    cpar = read_control_par(\"tests/testing_folder/single_cam/parameters/ptv.par\")\n",
-      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 475, in read_control_par\n",
-      "    cpar.from_file(filename)\n",
-      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 437, in from_file\n",
-      "    raise FileNotFoundError(f\"Could not open file {filename}\")\n",
-      "FileNotFoundError: Could not open file tests/testing_folder/single_cam/parameters/ptv.par\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 551, in read_control_par\n",
+      "    return ControlPar().from_file(filename)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 503, in from_file\n",
+      "    if not filename.exists():\n",
+      "           ^^^^^^^^^^^^^^^\n",
+      "AttributeError: 'str' object has no attribute 'exists'\n",
       "\n",
       "======================================================================\n",
-      "ERROR: test_two_camera_matching (__main__.TestReadControlPar)\n",
+      "ERROR: test_two_camera_matching (__main__.TestReadControlPar.test_two_camera_matching)\n",
       "Setup is the same as the 4-camera test, targets are darkened in.\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_651052/2570679598.py\", line 170, in test_two_camera_matching\n",
+      "  File \"/tmp/ipykernel_579388/1069249577.py\", line 170, in test_two_camera_matching\n",
       "    cpar = read_control_par(\"tests/testing_fodder/parameters/ptv.par\")\n",
-      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 475, in read_control_par\n",
-      "    cpar.from_file(filename)\n",
-      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 437, in from_file\n",
-      "    raise FileNotFoundError(f\"Could not open file {filename}\")\n",
-      "FileNotFoundError: Could not open file tests/testing_fodder/parameters/ptv.par\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 551, in read_control_par\n",
+      "    return ControlPar().from_file(filename)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 503, in from_file\n",
+      "    if not filename.exists():\n",
+      "           ^^^^^^^^^^^^^^^\n",
+      "AttributeError: 'str' object has no attribute 'exists'\n",
       "\n",
       "======================================================================\n",
-      "ERROR: test_valid_file (__main__.TestReadControlPar)\n",
+      "ERROR: test_valid_file (__main__.TestReadControlPar.test_valid_file)\n",
       "Read a valid control.par file.\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"/tmp/ipykernel_651052/2570679598.py\", line 38, in test_valid_file\n",
+      "  File \"/tmp/ipykernel_579388/1069249577.py\", line 38, in test_valid_file\n",
       "    result = read_control_par(\"tests/testing_folder/corresp/valid.par\")\n",
-      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 475, in read_control_par\n",
-      "    cpar.from_file(filename)\n",
-      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 437, in from_file\n",
-      "    raise FileNotFoundError(f\"Could not open file {filename}\")\n",
-      "FileNotFoundError: Could not open file tests/testing_folder/corresp/valid.par\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 551, in read_control_par\n",
+      "    return ControlPar().from_file(filename)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/user/Documents/repos/openptvpy/openptv-python/openptv_python/parameters.py\", line 503, in from_file\n",
+      "    if not filename.exists():\n",
+      "           ^^^^^^^^^^^^^^^\n",
+      "AttributeError: 'str' object has no attribute 'exists'\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 6 tests in 0.008s\n",
+      "Ran 6 tests in 0.014s\n",
       "\n",
-      "FAILED (errors=5)\n"
+      "FAILED (errors=6)\n"
      ]
     }
    ],
@@ -402,8 +420,8 @@
     "        corrected = []\n",
     "        cal = Calibration()\n",
     "        cal.from_file(\n",
-    "            \"tests/testing_folder/single_cam/calibration/cam_1.tif.ori\",\n",
-    "            \"tests/testing_folder/single_cam/calibration/cam_1.tif.addpar\",\n",
+    "            Path(\"tests/testing_folder/single_cam/calibration/cam_1.tif.ori\"),\n",
+    "            Path(\"tests/testing_folder/single_cam/calibration/cam_1.tif.addpar\"),\n",
     "        )\n",
     "        cals.append(cal)\n",
     "\n",
@@ -483,7 +501,8 @@
     "                    self.assertTrue(found_correct_pnr)\n",
     "\n",
     "        # continue to the consistent_pair matching test\n",
-    "        con = [n_tupel() for _ in range(4 * 16)]\n",
+    "        # con = [n_tupel() for _ in range(4 * 16)]\n",
+    "        con = np.tile(n_tupel, 4*16)\n",
     "        tusage = safely_allocate_target_usage_marks(cpar.num_cams)\n",
     "\n",
     "        # high accept corr bcz of closeness to epipolar lines.\n",
@@ -578,22 +597,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "test_correct_list_size (__main__.TestSafelyAllocateAdjacencyLists)\n",
-      "Test that the adjacency lists are correctly sized. ... ok\n",
-      "test_memory_error (__main__.TestSafelyAllocateAdjacencyLists)\n",
+      "test_correct_list_size (__main__.TestSafelyAllocateAdjacencyLists.test_correct_list_size)\n",
+      "Test that the adjacency lists are correctly sized. ... FAIL\n",
+      "test_memory_error (__main__.TestSafelyAllocateAdjacencyLists.test_memory_error)\n",
       "Memory stress test. ... ok\n",
       "\n",
+      "======================================================================\n",
+      "FAIL: test_correct_list_size (__main__.TestSafelyAllocateAdjacencyLists.test_correct_list_size)\n",
+      "Test that the adjacency lists are correctly sized.\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.057s\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_579388/3643237656.py\", line 13, in test_correct_list_size\n",
+      "    self.assertEqual(len(lists[i][j]), target_counts[i])\n",
+      "AssertionError: 5 != 3\n",
       "\n",
-      "OK\n"
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 0.004s\n",
+      "\n",
+      "FAILED (failures=1)\n"
      ]
     }
    ],
