--- a/tests/test_lsqadj.ipynb
+++ b/tests/test_lsqadj.ipynb
@@ -210,7 +210,7 @@
    "outputs": [],
    "source": [
     "def myata(a, m, n, n_large):\n",
-    "    ata = np.zeros((n, n_large), dtype=float)\n",
+    "    ata = np.zeros((n, n_large), dtype=np.float64)\n",
     "    \n",
     "    for i in range(n):\n",
     "        for j in range(n_large):\n",
