--- a/tests/test_take_best_candidates.ipynb
+++ b/tests/test_take_best_candidates.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "import unittest\n",
-    "from typing import List, Optional\n",
-    "from dataclasses import dataclass\n",
+    "from typing import List\n",
+    "import numpy as np\n",
     "\n"
    ]
   },
@@ -18,7 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openptv_python.tracking_frame_buf import n_tupel"
+    "from openptv_python.tracking_frame_buf import n_tupel\n",
+    "from openptv_python.constants import TR_UNUSED"
    ]
   },
   {
@@ -44,11 +45,11 @@
    "outputs": [],
    "source": [
     "\n",
-    "def take_best_candidates(src: List[n_tupel], dst: List[n_tupel], num_cams: int, num_cands: int, tusage: List[List[int]]) -> int:\n",
+    "def take_best_candidates(src: np.ndarray, dst: np.ndarray, num_cams: int, num_cands: int, tusage: List[List[int]]) -> int:\n",
     "    taken: int = 0\n",
     "\n",
     "    # Sort candidates by match quality (.corr)\n",
-    "    src.sort(key=lambda x: x.corr)\n",
+    "    src.sort(order = 'corr')\n",
     "\n",
     "    # Take quadruplets from the top to the bottom of the sorted list\n",
     "    # only if none of the points has already been used\n",
@@ -58,7 +59,7 @@
     "            tnum: int = src[cand]['p'][cam]\n",
     "\n",
     "            # If any correspondence in this camera, check that target is free\n",
-    "            if tnum > -1 and tusage[cam][tnum] > 0:\n",
+    "            if tnum > TR_UNUSED and tusage[cam][tnum] > 0:\n",
     "                has_used_target = True\n",
     "                break\n",
     "\n",
@@ -68,7 +69,7 @@
     "        # Only now can we commit to marking used targets.\n",
     "        for cam in range(num_cams):\n",
     "            tnum = src[cand]['p'][cam]\n",
-    "            if tnum > -1:\n",
+    "            if tnum > TR_UNUSED:\n",
     "                tusage[cam][tnum] += 1\n",
     "        dst[taken] = src[cand]\n",
     "        taken += 1\n",
@@ -86,23 +87,55 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "test_no_candidates (__main__.TestTakeBestCandidates) ... ok\n",
-      "test_pairs (__main__.TestTakeBestCandidates) ... ok\n",
-      "test_quadruplets (__main__.TestTakeBestCandidates) ... ok\n",
-      "test_triplets (__main__.TestTakeBestCandidates) ... ok\n",
+      "test_no_candidates (__main__.TestTakeBestCandidates.test_no_candidates) ... ERROR\n",
+      "test_pairs (__main__.TestTakeBestCandidates.test_pairs) ... FAIL\n",
+      "test_quadruplets (__main__.TestTakeBestCandidates.test_quadruplets) ... ERROR\n",
+      "test_triplets (__main__.TestTakeBestCandidates.test_triplets) ... FAIL\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_no_candidates (__main__.TestTakeBestCandidates.test_no_candidates)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_580508/1012884397.py\", line 65, in test_no_candidates\n",
+      "    taken = take_best_candidates(src, dst, num_cams, num_cands, tusage)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/tmp/ipykernel_580508/842572579.py\", line 5, in take_best_candidates\n",
+      "    src.sort(order = 'corr')\n",
+      "TypeError: 'order' is an invalid keyword argument for sort()\n",
+      "\n",
+      "======================================================================\n",
+      "ERROR: test_quadruplets (__main__.TestTakeBestCandidates.test_quadruplets)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_580508/1012884397.py\", line 19, in test_quadruplets\n",
+      "    self.assertEqual(dst, src)\n",
+      "  File \"/home/user/mambaforge/envs/openptvpy/lib/python3.12/unittest/case.py\", line 885, in assertEqual\n",
+      "    assertion_func(first, second, msg=msg)\n",
+      "  File \"/home/user/mambaforge/envs/openptvpy/lib/python3.12/unittest/case.py\", line 875, in _baseAssertEqual\n",
+      "    if not first == second:\n",
+      "           ^^^^^^^^^^^^^^^\n",
+      "ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_pairs (__main__.TestTakeBestCandidates.test_pairs)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_580508/1012884397.py\", line 53, in test_pairs\n",
+      "    self.assertEqual(taken, len(src))\n",
+      "AssertionError: 1 != 4\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_triplets (__main__.TestTakeBestCandidates.test_triplets)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_580508/1012884397.py\", line 35, in test_triplets\n",
+      "    self.assertEqual(taken, len(src))\n",
+      "AssertionError: 1 != 4\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 4 tests in 0.006s\n",
+      "Ran 4 tests in 0.007s\n",
       "\n",
-      "OK\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<openptv_python.tracking_frame_buf.n_tupel object at 0x7f69b4283e50>, <openptv_python.tracking_frame_buf.n_tupel object at 0x7f69b4281930>, <openptv_python.tracking_frame_buf.n_tupel object at 0x7f69b4283df0>, <openptv_python.tracking_frame_buf.n_tupel object at 0x7f69d99bee00>]\n",
-      "[<openptv_python.tracking_frame_buf.n_tupel object at 0x7f69b4283e50>, <openptv_python.tracking_frame_buf.n_tupel object at 0x7f69b4281930>, <openptv_python.tracking_frame_buf.n_tupel object at 0x7f69b4283df0>, <openptv_python.tracking_frame_buf.n_tupel object at 0x7f69d99bee00>]\n"
+      "FAILED (failures=2, errors=2)\n"
      ]
     }
    ],
@@ -110,12 +143,13 @@
     "@run_test\n",
     "class TestTakeBestCandidates(unittest.TestCase):\n",
     "    def test_quadruplets(self):\n",
-    "        src = [\n",
-    "            n_tupel(p=[0, 1, 2, 3], corr=0.9),\n",
-    "            n_tupel(p=[1, 2, 3, 4], corr=0.8),\n",
-    "            n_tupel(p=[2, 3, 4, 5], corr=0.7),\n",
-    "            n_tupel(p=[3, 4, 5, 6], corr=0.6)\n",
-    "        ]\n",
+    "        src = np.array([\n",
+    "            ([0, 1, 2, 3], 0.9),\n",
+    "            ([1, 2, 3, 4], 0.8),\n",
+    "            ([2, 3, 4, 5], 0.7),\n",
+    "            ([3, 4, 5, 6], 0.6)\n",
+    "        ], dtype=n_tupel.dtype)\n",
+    "        \n",
     "        dst = [None] * len(src)\n",
     "        num_cams = 4\n",
     "        num_cands = len(src)\n",
@@ -127,12 +161,12 @@
     "        self.assertEqual(dst, src)\n",
     "\n",
     "    def test_triplets(self):\n",
-    "        src = [\n",
-    "            n_tupel(p=[0, 1, 2, -1], corr=0.9),\n",
-    "            n_tupel(p=[1, 2, 3, -1], corr=0.8),\n",
-    "            n_tupel(p=[2, 3, 4, -1], corr=0.7),\n",
-    "            n_tupel(p=[3, 4, 5, -1], corr=0.6)\n",
-    "        ]\n",
+    "        src = np.array([\n",
+    "            ([0, 1, 2, -1], 0.9),\n",
+    "            ([1, 2, 3, -1], 0.8),\n",
+    "            ([2, 3, 4, -1], 0.7),\n",
+    "            ([3, 4, 5, -1], 0.6)\n",
+    "        ], dtype=n_tupel.dtype)\n",
     "        dst = [None] * len(src)\n",
     "        num_cams = 4\n",
     "        num_cands = len(src)\n",
@@ -144,13 +178,14 @@
     "        self.assertEqual(dst[:taken], src[:taken])\n",
     "\n",
     "    def test_pairs(self):\n",
-    "        src = [\n",
-    "            n_tupel(p=[0, 1, -1, -1], corr=0.9),\n",
-    "            n_tupel(p=[1, 2, -1, -1], corr=0.8),\n",
-    "            n_tupel(p=[2, 3, -1, -1], corr=0.7),\n",
-    "            n_tupel(p=[3, 4, -1, -1], corr=0.6)\n",
-    "        ]\n",
-    "        dst = [None] * len(src)\n",
+    "        src = np.array([\n",
+    "            ([0, 1, -1, -1], 0.9),\n",
+    "            ([1, 2, -1, -1], 0.8),\n",
+    "            ([2, 3, -1, -1], 0.7),\n",
+    "            ([3, 4, -1, -1], 0.6)\n",
+    "        ], dtype = n_tupel.dtype)\n",
+    "        \n",
+    "        dst = np.tile(n_tupel, len(src))\n",
     "        num_cams = 4\n",
     "        num_cands = len(src)\n",
     "        tusage = [[0] * 10 for _ in range(num_cams)]\n",
@@ -196,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4
  },
